--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,20 +1,12 @@
 <!DOCTYPE html>
 <html>
+	{% include head.html %}
 
-  {% include head.html %}
-
-  <body>
-
-    {% include header.html %}
-
-    <div class="page-content">
-      <div class="wrapper">
-        {{ content }}
-      </div>
-    </div>
-
-    {% include footer.html %}
-
-  </body>
-
+	<body>
+		{% include header.html %}
+		{% include page.html %}
+		{% include contact.html %}
+		{% include footer.html %}
+		{% include js.html %}
+	</body>
 </html>
